--- a/html e css/estilo.css
+++ b/html e css/estilo.css
@@ -2,7 +2,7 @@ body {
   margin: 0;
   padding: 0;
   background-color: rgb(236, 235, 235);
-  
+
 }
 
 /* ------- CABEÇALHO ---------- */
@@ -55,6 +55,7 @@ header {
   font-size: 30px;
   color: #f0f0f0;
   cursor: pointer;
+  margin-top: 10px;
 }
 
 .sistema:hover {
@@ -64,6 +65,14 @@ header {
 
 .logo {
   margin-left: 30px;
+  display: flex;
+}
+
+
+
+.logo img {
+  height: 6vh;
+  margin: 0 auto;
 }
 
 #contato {
@@ -75,7 +84,7 @@ header {
   border: 1px solid rgb(0, 0, 0);
   border-radius: 3px;
   cursor: pointer;
-  padding:1px 5px;
+  padding: 1px 5px;
 }
 
 #contato:hover {
@@ -111,18 +120,18 @@ header {
   font-family: 'texto';
   src: url('/fontes/Sansation_Light.ttf') format('truetype');
 }
+
 /* ------- QUEM SOMOS --------- */
 
 #quemsomos {
-margin-top: 100px;
-align-items: center;
+  align-items: center;
 }
 
 .qm {
   text-align: center;
   font-family: 'viavale';
   font-size: 60px;
-  margin-top: -20px;
+
 }
 
 .texto {
@@ -142,8 +151,9 @@ align-items: center;
 
 #imgqmsomos img {
   height: 200px;
-  margin-bottom: 50px;
+
 }
+
 /* ------ NOSSA EQUIPE ------ */
 
 #nossaequipe {
@@ -191,15 +201,11 @@ align-items: center;
 figcaption {
   font-size: 30px;
   font-family: 'viavale';
+  margin-bottom: 20px;
 }
 
 
 /* ---------- LOCALIZAÇÃO ----------- */
-
-#div3 {
-  margin-top: 100px;
-  margin-bottom: 100px;
-}
 
 #localizacao {
   text-align: center;
@@ -231,8 +237,8 @@ figcaption {
 }
 
 .mapBoxPequeno {
-  width: 310px;
-  height: 210px;
+  width: 260px;
+  height: 160px;
   background-color: rgb(194, 194, 194);
   margin: 0 auto;
   border: solid 4px rgb(0, 0, 0);
@@ -245,7 +251,7 @@ figcaption {
   font-size: 80px;
 }
 
-@media (min-width:980px){
+@media (min-width:980px) {
   .quebra {
     display: none;
   }
@@ -253,11 +259,13 @@ figcaption {
 
 .rua {
   font-size: 50px;
+  font-family: 'texto';
+  white-space: normal;
 }
 
 /* ------- NOSSOS SERVICÇOS --------- */
 #nossosservicos {
-  margin-top: 100px;
+
   text-align: center;
 }
 
@@ -274,7 +282,7 @@ figcaption {
 }
 
 .textons {
-  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  font-family: 'texto';
   font-size: 30px;
   width: 80vw;
   margin-top: -20px;
@@ -300,10 +308,6 @@ figcaption {
 #certificacao:hover {
   background-color: #49515a;
 }
-
-
-
-
 
 /* ------- REDES SOCIAIS --------- */
 
@@ -368,45 +372,53 @@ figcaption {
   transform: skewy(-20deg);
 }
 
-#redes {
-  font-family: 'viavale';
-  font-size: 80px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-top: 70px;
-}
-
-.clique {
-  font-size: 30px;
-  font-family: 'cambria';
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-#email {
-  font-family: 'viavale';
-  font-size: 80px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-bottom: 40px;
-  margin-top: -20px;
-}
-
-.email {
-  font-family: 'viavale';
-  font-size: 35px;
-  letter-spacing: 1px;
-}
-
-.ctt {
-  margin-top: -40px;
-}
-
 .icon {
   margin-top: -30px;
+}
+
+#interacao {
+  display: grid;
+  place-items: center;
+
+}
+
+#interacao h1 {
+  font-family: 'viavale';
+  font-size: 70px;
+}
+
+#interacao p {
+  font-family: 'texto';
+  font-size: 30px;
+  font-weight: 200;
+}
+
+#interacao span {
+  font-family: 'viavale';
+  font-size: 35px;
+}
+
+#redes {
+  font-family: 'viavale' !important;
+  margin-top: 40px !important;
+  font-size: 70px !important;
+  margin-bottom: -20px !important;
+}
+
+/*----------- FOOTER ------------*/ 
+
+footer {
+  width: 100%;
+  height: 120px;
+  background-color: #3d4f61;
+  border: #000000 1px solid;
+}
+
+footer img {
+  height: 80px;
+  display: flex;
+  margin: 0 auto;
+  margin-top: 15px;
 }
 
 /* -------- LINHAS --------- */
@@ -416,19 +428,9 @@ figcaption {
   width: 70%;
   display: block;
   margin: 0 auto;
-  margin-top: 15px;
-  margin-bottom: 15px;
+  margin-top: 60px;
+  margin-bottom: 60px;
   clear: both;
-}
-
-#div1 {
-  margin-top: 50px;
-  margin-bottom: 0px;
-}
-
-#div2 {
-  margin-top: 7px;
-  margin-bottom: 70px;
 }
 
 /* ----- RESPONSIVIDADE ------- */
@@ -438,6 +440,7 @@ figcaption {
   .menu {
     gap: 60px
   }
+
   #contato {
     display: none;
   }
@@ -447,44 +450,82 @@ figcaption {
 - TIRA O MENU QUANDO TIVER MENOS DE 1060PX NA TELA
 - ARRUMA AS FOTOS DA "NOSSA EQUIPE"
 */
-@media (max-width: 1060px){
+@media (max-width: 1360px) {
   .menu li {
     display: none
   }
 
-  .fileira1 {
-    flex-direction: column;
-    display: flex;
+  #contato {
+    display: none
   }
 
-  .fileira2 {
+  .fileira1 , .fileira2 {
     flex-direction: column;
     display: flex;
+    margin-bottom: 0px;
   }
 
-  #p2 , #p5 {
+  #p2,
+  #p5 {
     margin-left: 0px;
     margin-right: 0px;
   }
-}
 
+  .pessoa {
+    width: 200px;
+    height: 220px;
+  }
 
-/* ARRUMA A IMAGEM DO "QUEM SOMOS" PARA TELA MENOS Q 1250PX */
-@media (max-width: 1250px){
   #imgqmsomos img {
     height: 70px;
   }
+
+  .subtitulo {
+    font-size: 40px;
+  }
+
+  #interacao h1{
+    font-size: 50px;
+    display: flex;
+    align-items: center;
+  }
+
+  #interacao p {
+    font-size: 20px;
+  
+  }
+
+  #interacao span {
+    font-size: 20px;
+  }
+
+  #redes {
+    font-size: 50px !important;
+  }
+
+  .ne {
+    font-size: 50px ;
+  }
 }
 
+
 /* EM TELAS MENOR QUE 980PX O TEXTO DO "QUEM SOMOS" FICA MENOR */
-@media (max-width: 980px){
+@media (max-width: 980px) {
   .texto {
-    font-size: 16px; 
+    font-size: 16px;
+  }
+
+  .textons {
+    font-size: 16px;
+  }
+
+  .ns {
+    font-size: 50px;
   }
 }
 
 /* TELAS MENORES QUE 905PX A ESCRITA NO CABEÇALHO FICA MENOR */
-@media (max-width: 905px){
+@media (max-width: 905px) {
   .sistema {
     font-size: 20px;
   }
@@ -492,17 +533,22 @@ figcaption {
 
 
 /* FERRAMENTA DO CABEÇALHO SÓ APARECE COM MENOS DE 1060PX*/
-@media (min-width: 1060px){
+@media (min-width: 1360px) {
   #dropdown {
     display: none;
   }
+
 }
 
 /* ENDEREÇO RESPONSIVO */
 
 @media (max-width: 1400px) {
   .rua {
-    font-size:30px ;
+    font-size: 20px;
+  }
+
+  .logo img {
+    display: none;
   }
 }
 
@@ -511,20 +557,21 @@ figcaption {
 
 @media (min-width: 1350px) {
   .mapBox {
-      display: block;
+    display: block;
   }
 }
 
 @media (min-width: 1001px) and (max-width: 1349px) {
   .mapBoxMedio {
-      display: block;
+    display: block;
   }
 }
 
 @media (max-width: 1000px) {
   .mapBoxPequeno {
-      display: block;
+    display: block;
   }
 }
 
 
+/* ARRUMANDO A LOGO DO CABEÇALHO*/
