--- a/estilo.css
+++ b/estilo.css
@@ -1,9 +1,4 @@
-body {
-  margin: 0;
-  padding: 0;
-  background-color: rgb(236, 235, 235);
 
-}
 
 /* ------- CABEÇALHO ---------- */
 header {
@@ -21,22 +16,18 @@ header {
 }
 
 #carouselExampleIndicators {
-  width: 99%;
-  margin: 0 auto;
-  border: #000000 solid 5px;
-  border-radius: 20px;
-  margin-top: 3px;
+  margin-top: 2px;
 }
 
 
 @font-face {
   font-family: 'viavale';
-  src: url('/fontes/big_noodle_titling_oblique.ttf') format('truetype');
+  src: url('fontes/big_noodle_titling_oblique.ttf') format('truetype');
 }
 
 @font-face {
   font-family: 'texto';
-  src: url('/fontes/Sansation_Light.ttf') format('truetype');
+  src: url('fontes/Sansation_Light.ttf') format('truetype');
 }
 
 /* ------- QUEM SOMOS --------- */
@@ -45,32 +36,6 @@ header {
   align-items: center;
 }
 
-.qm {
-  text-align: center;
-  font-family: 'viavale';
-  font-size: 60px;
-
-}
-
-.texto {
-  text-align: center;
-  font-family: 'texto';
-  font-weight: 300;
-  font-size: 30px;
-  width: 70vw;
-  display: flex;
-  margin: 0 auto;
-  margin-bottom: 30px;
-}
-
-#imgqmsomos {
-  text-align: center;
-}
-
-#imgqmsomos img {
-  height: 200px;
-
-}
 
 /* ------ NOSSA EQUIPE ------ */
 
@@ -129,7 +94,7 @@ figcaption {
   text-align: center;
   font-size: 90px;
   font-family: 'viavale';
-
+  margin-top: 50px;
 }
 
 .mapBox {
@@ -141,6 +106,7 @@ figcaption {
   border-radius: 10px;
   margin-top: 50px;
   display: none;
+  margin-bottom: 50px;
 }
 
 .mapBoxMedio {
@@ -152,6 +118,7 @@ figcaption {
   border-radius: 10px;
   margin-top: 50px;
   display: none;
+  margin-bottom: 50px;
 }
 
 .mapBoxPequeno {
@@ -163,10 +130,12 @@ figcaption {
   border-radius: 10px;
   margin-top: 50px;
   display: none;
+  margin-bottom: 30px;
 }
 
 .nossoendereco {
   font-size: 80px;
+  margin-top: 50px;
 }
 
 @media (min-width:980px) {
@@ -182,49 +151,27 @@ figcaption {
 }
 
 /* ------- NOSSOS SERVICÇOS --------- */
-#nossosservicos {
+#nossosServicos {
+  margin-top: 50px;
+  margin-bottom: 50px;
+}
 
+#nossosServicos .pb-2 {
   text-align: center;
-}
-
-.ns {
   font-family: 'viavale';
-  font-size: 90px;
+  font-size: 60px;
+  margin-top: 50px;
 }
 
-.subtitulo {
-  font-family: 'viavale';
-  font-size: 50px;
-  margin-top: 60px;
-  letter-spacing: 1px;
+#traco {
+  text-decoration: line-through;
+  text-decoration-thickness: 1px
 }
 
-.textons {
-  font-family: 'texto';
-  font-size: 30px;
-  width: 80vw;
-  margin-top: -20px;
-  margin: 0 auto;
-}
+/* ----------- CONTATO ------------ */
 
-#textocerti {
-  margin-bottom: 30px;
-}
-
-#certificacao {
-  text-decoration: none;
-  background-color: #2c3c4c;
-  color: white;
-  padding: 12px;
-  border: 1px black solid;
-  border-radius: 5px;
-  font-family: 'viavale';
-  font-size: 25px;
-  font-weight: 500
-}
-
-#certificacao:hover {
-  background-color: #49515a;
+#interacao h1 {
+  margin-top: 40px;
 }
 
 /* ------- REDES SOCIAIS --------- */
@@ -259,7 +206,6 @@ figcaption {
   margin: 0 20px;
   position: relative;
   transition: 0.4s linear;
-
 }
 
 .icon a::before,
@@ -292,6 +238,7 @@ figcaption {
 
 .icon {
   margin-top: -30px;
+  margin-bottom: 40px;
 }
 
 #interacao {
@@ -323,32 +270,10 @@ figcaption {
   margin-bottom: -20px !important;
 }
 
-/*----------- FOOTER ------------*/ 
+/*----------- FOOTER E LINHAS ------------*/ 
 
 footer {
-  width: 100%;
-  height: 120px;
-  background-color: #3d4f61;
-  border: #000000 1px solid;
-}
-
-footer img {
-  height: 80px;
-  display: flex;
-  margin: 0 auto;
-  margin-top: 15px;
-}
-
-/* -------- LINHAS --------- */
-.linha {
-  background-color: rgba(168, 164, 164, 0.781);
-  height: 1px;
-  width: 70%;
-  display: block;
-  margin: 0 auto;
-  margin-top: 60px;
-  margin-bottom: 60px;
-  clear: both;
+  margin-top: 100px;
 }
 
 /* ----- RESPONSIVIDADE ------- */
