--- a/estilo.css
+++ b/estilo.css
@@ -1,4 +1,10 @@
+body {
+  background-color: rgb(230, 230, 230) !important;
+}
 
+main {
+  width: 99%;
+}
 
 /* ------- CABEÇALHO ---------- */
 header {
@@ -12,7 +18,15 @@ header {
 }
 
 .navbar-brand {
-  font-size: 30px !important;
+  cursor: pointer;
+  font-size: 25px;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+.nav-item {
+  cursor: pointer;
+  font-size: 20px;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
 #carouselExampleIndicators {
@@ -20,33 +34,24 @@ header {
 }
 
 
-@font-face {
-  font-family: 'viavale';
-  src: url('fontes/big_noodle_titling_oblique.ttf') format('truetype');
-}
-
-@font-face {
-  font-family: 'texto';
-  src: url('fontes/Sansation_Light.ttf') format('truetype');
-}
-
 /* ------- QUEM SOMOS --------- */
 
 #quemsomos {
-  align-items: center;
+  margin-left: 1%;
+  background-color: white;
 }
 
 
 /* ------ NOSSA EQUIPE ------ */
 
 #nossaequipe {
+  margin-left: 1%;
   text-align: center;
+  background-color: white;
 }
 
-.ne {
-  font-family: 'viavale';
-  font-size: 70px;
-  margin-bottom: 80px;
+#ne {
+  margin: 30px;
 }
 
 
@@ -64,6 +69,7 @@ header {
 
 .fileira1 {
   display: inline-flex;
+  margin-top: 30px;
   margin-bottom: 50px;
 }
 
@@ -83,7 +89,7 @@ header {
 
 figcaption {
   font-size: 30px;
-  font-family: 'viavale';
+  
   margin-bottom: 20px;
 }
 
@@ -91,10 +97,15 @@ figcaption {
 /* ---------- LOCALIZAÇÃO ----------- */
 
 #localizacao {
+  margin-left: 1%;
   text-align: center;
   font-size: 90px;
-  font-family: 'viavale';
   margin-top: 50px;
+  background-color: white;
+}
+
+#localizacao h1 {
+  margin: 30px;
 }
 
 .mapBox {
@@ -133,10 +144,7 @@ figcaption {
   margin-bottom: 30px;
 }
 
-.nossoendereco {
-  font-size: 80px;
-  margin-top: 50px;
-}
+
 
 @media (min-width:980px) {
   .quebra {
@@ -152,13 +160,15 @@ figcaption {
 
 /* ------- NOSSOS SERVICÇOS --------- */
 #nossosServicos {
+  margin-left: 1%;
   margin-top: 50px;
   margin-bottom: 50px;
+  background-color: white;
 }
 
 #nossosServicos .pb-2 {
   text-align: center;
-  font-family: 'viavale';
+  
   font-size: 60px;
   margin-top: 50px;
 }
@@ -170,9 +180,13 @@ figcaption {
 
 /* ----------- CONTATO ------------ */
 
-#interacao h1 {
-  margin-top: 40px;
+#contato {
+  margin-left: 1%;
+  background-color: white;
+  margin-bottom: 50px;
 }
+
+
 
 /* ------- REDES SOCIAIS --------- */
 
@@ -244,36 +258,34 @@ figcaption {
 #interacao {
   display: grid;
   place-items: center;
-
 }
 
 #interacao h1 {
-  font-family: 'viavale';
-  font-size: 70px;
+  margin-top: 20px;
 }
 
 #interacao p {
-  font-family: 'texto';
   font-size: 30px;
   font-weight: 200;
 }
 
 #interacao span {
-  font-family: 'viavale';
   font-size: 35px;
+  font-weight: 600;
 }
 
 #redes {
-  font-family: 'viavale' !important;
-  margin-top: 40px !important;
-  font-size: 70px !important;
-  margin-bottom: -20px !important;
+  margin-top: 40px;
 }
 
 /*----------- FOOTER E LINHAS ------------*/ 
 
-footer {
-  margin-top: 100px;
+#lifooter li a {
+  cursor: pointer;
+}
+
+#lifooter:hover {
+  color: black;
 }
 
 /* ----- RESPONSIVIDADE ------- */
@@ -284,9 +296,6 @@ footer {
     gap: 60px
   }
 
-  #contato {
-    display: none;
-  }
 }
 
 /* 
@@ -298,9 +307,6 @@ footer {
     display: none
   }
 
-  #contato {
-    display: none
-  }
 
   .fileira1 , .fileira2 {
     flex-direction: column;
