alteração no nossa equipe

--- a/estilo.css
+++ b/estilo.css
@@ -8,13 +8,16 @@ main {
 
 /* ------- CABEÇALHO ---------- */
 header {
-  font-family: 'viavale';
   font-size: 30px;
   position: sticky;
   top: 0;
   border: 1px solid black;
   z-index: 100;
   text-align: center !important;
+}
+
+#menu {
+  background-color: rgb(33, 34, 34);
 }
 
 .navbar-brand {
@@ -50,50 +53,27 @@ header {
   background-color: white;
 }
 
-#ne {
-  margin: 30px;
+.col img {
+  height: 225px
 }
 
-
-.pessoa {
-  width: 300px;
-  height: 320px;
-  border: 3px solid black;
-  border-radius: 20px;
+#nossaequipe .container {
+  width: 60%;
 }
 
-.person {
-  margin-left: auto;
-  margin-right: auto;
+.bd-placeholder-img {
+  font-size: 1.125rem;
+  text-anchor: middle;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  user-select: none;
 }
 
-.fileira1 {
-  display: inline-flex;
-  margin-top: 30px;
-  margin-bottom: 50px;
+@media (min-width: 768px) {
+  .bd-placeholder-img-lg {
+    font-size: 3.5rem;
+  }
 }
-
-.fileira2 {
-  display: inline-flex;
-}
-
-#p2 {
-  margin-left: 50px;
-  margin-right: 50px;
-}
-
-#p5 {
-  margin-left: 50px;
-  margin-right: 50px;
-}
-
-figcaption {
-  font-size: 30px;
-  
-  margin-bottom: 20px;
-}
-
-
 /* ---------- LOCALIZAÇÃO ----------- */
 
 #localizacao {
@@ -106,6 +86,11 @@ figcaption {
 
 #localizacao h1 {
   margin: 30px;
+}
+
+#localizacao .rua {
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
+
 }
 
 .mapBox {
