--- a/estilo.css
+++ b/estilo.css
@@ -53,6 +53,10 @@ header {
   background-color: white;
 }
 
+#ne {
+  margin-top: 30px;
+}
+
 .col img {
   height: 225px
 }
@@ -86,11 +90,6 @@ header {
 
 #localizacao h1 {
   margin: 30px;
-}
-
-#localizacao .rua {
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
-
 }
 
 .mapBox {
@@ -129,8 +128,6 @@ header {
   margin-bottom: 30px;
 }
 
-
-
 @media (min-width:980px) {
   .quebra {
     display: none;
@@ -141,6 +138,8 @@ header {
   font-size: 50px;
   font-family: 'texto';
   white-space: normal;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
+
 }
 
 /* ------- NOSSOS SERVICÇOS --------- */
